--- a/my-backend/package.json
+++ b/my-backend/package.json
@@ -11,11 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "base-64": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.0"
+  },
+  "devDependencies": {
+    "@types/jwt-decode": "^3.1.0"
   }
 }
