--- a/package.json
+++ b/package.json
@@ -16,29 +16,29 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/geolocation": "^3.4.0",
-    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "expo": "^51.0.38",
+    "expo": "^51.0.39",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "^3.1.0",
-    "expo-splash-screen": "~0.27.5",
+    "expo-router": "^3.5.24",
+    "expo-splash-screen": "^0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "jwt-decode": "^4.0.0",
-    "metro": "^0.81.0",
+    "metro": "^0.80.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "^1.18.2",
+    "react-native-maps": "^1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
