--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/cli-server-api": "^15.1.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "expo": "^51.0.39",
+    "expo": "^51.0.38",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -35,7 +36,7 @@
     "metro": "^0.80.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react-native": "^0.76.1",
     "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.14.0",
