--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@mapbox/polyline": "^1.2.1",
-    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/cli-server-api": "^15.1.2",
     "@react-native-community/geolocation": "^3.4.0",
@@ -39,17 +38,13 @@
     "expo-web-browser": "~13.0.3",
     "google-map-react": "^2.2.1",
     "jwt-decode": "^4.0.0",
-
     "metro": "^0.81.0",
     "polyline": "^0.2.0",
-
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.76.1",
     "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.16.1",
-
-    "react-native-maps": "^1.20.0",
     "react-native-maps": "^1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
@@ -64,6 +59,7 @@
     "@types/mapbox__polyline": "^1.0.5",
     "@types/polyline": "^0.1.32",
     "@types/react": "~18.2.45",
+    "@types/react-navigation": "^3.4.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
