--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/cli-server-api": "^15.1.2",
     "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
