--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/mapbox__polyline": "^1.0.5",
     "@types/polyline": "^0.1.32",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-navigation": "^3.4.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
