--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "express": "^4.21.2",
     "google-map-react": "^2.2.1",
     "jwt-decode": "^4.0.0",
     "metro": "^0.81.0",
@@ -52,7 +53,9 @@
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "react-native-web-maps": "^0.3.0"
+    "react-native-web-maps": "^0.3.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
