--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-navigation": "^3.4.0",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/socket.io-client": "^1.4.36",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
