--- a/my-backend/package.json
+++ b/my-backend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/jwt-decode": "^3.1.0"
