--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.14.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "^3.35.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-native-web-maps": "^0.3.0",
