--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@react-native-community/cli": "latest",
     "@babel/core": "^7.20.0",
     "@types/google-map-react": "^2.1.10",
     "@types/jest": "^29.5.12",
