--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-community/cli-server-api": "^15.1.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-picker/picker": "^2.10.2",
+    "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@tailwindcss/vite": "^4.0.0",
@@ -49,6 +50,7 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.14.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
@@ -60,8 +62,8 @@
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
-    "@react-native-community/cli": "latest",
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest",
     "@types/google-map-react": "^2.1.10",
     "@types/jest": "^29.5.12",
     "@types/mapbox__polyline": "^1.0.5",
