--- a/my-backend/.env
+++ b/my-backend/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://sQpbJkHNcJzho6Pd:sQpbJkHNcJzho6Pd@manzil.gxdiu.mongodb.net/
 PORT = 3000
-GOOGLE_API_KEY='AIzaSyAUwcgoinASwKDHlKDuW9HvNodSkBz64YI'
+GOOGLE_API_KEY='AIzaSyDx_TwV8vhwbKTTWn0tV2BVRDGIipfwzlc'
+WEATHER_API='IrcewJS0mpnHD8YvYx0F21aMGnqdlwLx'
