--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "google-map-react": "^2.2.1",
     "jwt-decode": "^4.0.0",
     "metro": "^0.81.0",
+    "moment": "^2.30.1",
     "polyline": "^0.2.0",
     "react": "18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
     "react-native-async-storage": "^0.0.1",
-
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
@@ -58,7 +60,6 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-native-web-maps": "^0.3.0",
