--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native": "0.76.6",
     "react-native-async-storage": "^0.0.1",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-date-picker": "^5.0.10",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
