--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@mapbox/polyline": "^1.2.1",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/cli-server-api": "^15.1.2",
     "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
     "@react-native-community/geolocation": "^3.4.0",
-    "@react-native-picker/picker": "^2.10.2",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/material-top-tabs": "^7.1.0",
-    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^6.4.1",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
@@ -57,12 +57,13 @@
     "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.5.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.1",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-native-web-maps": "^0.3.0",
