New link to deployed app

--- a/eas.json
+++ b/eas.json
@@ -9,10 +9,7 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal",
-      "env": {
-        "NPM_FLAGS": "--legacy-peer-deps"
-      }
+      "distribution": "internal"
     },
     "production": {
       "autoIncrement": true
