--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/stack": "^7.1.1",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "base-64": "^1.0.0",
@@ -46,9 +46,9 @@
     "metro": "^0.81.0",
     "moment": "^2.30.1",
     "polyline": "^0.2.0",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-datepicker": "^8.0.0",
-    "react-dom": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.6",
     "react-native-async-storage": "^0.0.1",
     "react-native-chart-kit": "^6.12.0",
