--- a/my-backend/package.json
+++ b/my-backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.0",
+    "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
