Car Rentals added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "datetimepicker",
         "editroominfo",
         "geolocation",
+        "homestyles",
         "manzil",
         "placestogo",
         "protectedroute",
