--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -30,15 +30,15 @@
     "base-64": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "expo": "~52.0.28",
+    "expo": "~52.0.42",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
     "expo-linking": "~7.0.5",
-    "expo-location": "~18.0.5",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.21",
+    "expo-location": "~18.0.10",
+    "expo-router": "~4.0.20",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.7",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "express": "^4.21.2",
     "google-map-react": "^2.2.1",
@@ -50,7 +50,7 @@
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.6",
+    "react-native": "0.76.9",
     "react-native-async-storage": "^0.0.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.10",
@@ -85,7 +85,7 @@
     "@types/react-test-renderer": "^18.0.7",
     "@types/socket.io-client": "^1.4.36",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
