--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@rnmapbox/maps": "^10.1.38",
     "@tailwindcss/vite": "^4.0.0",
-    "axios": "^1.7.9",
+    "axios": "^1.6.7",
     "base-64": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -34,7 +35,8 @@
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
     "expo-linking": "~7.0.5",
-    "expo-location": "~18.0.10",
+    "expo-location": "^17.0.1",
+    "expo-maps": "^0.7.3",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -43,6 +45,7 @@
     "express": "^4.21.2",
     "google-map-react": "^2.2.1",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "metro": "^0.81.0",
     "moment": "^2.30.1",
     "polyline": "^0.2.0",
@@ -59,6 +62,7 @@
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.5.1",
+    "react-native-permissions": "^5.3.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.16.1",
@@ -67,7 +71,8 @@
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "react-native-web-maps": "^0.3.0",
+    "react-native-web-maps": "^0.1.0",
+    "react-native-webview": "13.12.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.0"
@@ -77,6 +82,7 @@
     "@react-native-community/cli": "latest",
     "@types/google-map-react": "^2.1.10",
     "@types/jest": "^29.5.12",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/mapbox__polyline": "^1.0.5",
     "@types/polyline": "^0.1.32",
     "@types/react": "~18.3.12",
