Add the code for hotel admin backend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "datetimepicker",
+        "edithotel",
         "editroominfo",
         "geolocation",
         "homestyles",
