--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "slug": "manzil",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/download.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
@@ -45,7 +45,7 @@
     },
     "extra": {
 
-      "API_BASE_URL": "http://34.226.13.20:3000",
+      "API_BASE_URL": "http://10.130.218.95:3000",
       "router": {
         "origin": false
       },
