--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "slug": "manzil",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/APK.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
